# procedural-terrain-generation

./: Cargo.toml  README.md
src/: main.rs
src/game/: base.rs  camera.rs  mesh.rs  mod.rs
src/game/object/: mod.rs
src/game/terrain/: cache.rs  chunk.rs  chunk_mesh.rs  mod.rs  tree.rs
src/game/terrain/shaders/: generate_triangle.wgsl  generate_voxel.wgsl  render.wgsl
src/game/ui/: imgui_renderer.rs  mod.rs  terrain_visualizer.rs
src/game/ui/shaders/: render.wgsl
src/gfx/: instance.rs
src/windowing/: window.rs
